compiler/testData/diagnostics/tests/redeclarations/KotlinVsJava.fir.kt
// FILE: oneversion/Same.java
package oneversion;

public class Same {
}

// FILE: oneversion/Same.kt
package oneversion

class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>Same<!>
